--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "next": "^15.2.3",
+    "zod": "^3.24.2",
+    "zod-error": "^1.5.0"
   }
 }
