--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@types/react": "^19.0.12"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5",
+    "next": "^15.2.3",
+    "react": "^19.0.0"
   },
   "dependencies": {
-    "next": "^15.2.3",
-    "react": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "zod": "^3.24.2",
     "zod-error": "^1.5.0"
