--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "safe-actions-state",
-  "version": "1.0.0",
-  "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in auth, RBAC, Zod validation, auto retries, and real-time toast feedback. Just write your DB logic & zod schema, for your server action, we handle validation, auth, errors, retries & UI feedback seamlessly out of the box. No extra code, just focus on your logic! 🚀",
-  "module": "src/index.ts",
-  "type": "module",
+  "version": "1.0.1",
+  "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in auth, RBAC, Zod validation, auto retries, and real-time toast feedback. Just write your DB logic & zod schema, for your server action, we handle validation, auth, errors, retries & UI feedback seamlessly out of the box. No extra code, just focus on your app business logic only! 🚀",
   "private": false,
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.js"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -13,18 +18,13 @@
     "type": "git",
     "url": "https://github.com/SadiqVali786/safe-actions-state.git"
   },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/react": "^19.0.12"
-  },
+  "sideEffects": false,
   "peerDependencies": {
+    "@types/react": "^19.0.12",
     "typescript": "^5",
     "next": "^15.2.3",
-    "react": "^19.0.0"
-  },
-  "dependencies": {
-    "react-hot-toast": "^2.5.2",
+    "react": "^19.0.0",
     "zod": "^3.24.2",
-    "zod-error": "^1.5.0"
+    "react-hot-toast": "^2.5.2"
   }
 }
