--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "exports": {
     "import": "./dist/index.mjs",
     "require": "./dist/index.js"
