--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "rootDir": "src",
+    "outDir": "dist",
 
     // Environment setup & latest features
     "lib": ["esnext"],
@@ -26,5 +28,6 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
