--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   "sideEffects": false,
   "devDependencies": {
     "@types/react": "^19.0.12",
-    "typescript": "^5"
+    "@types/bun": "latest",
+    "zod": "^3.24.2",
+    "react-hot-toast": "^2.5.2",
+    "zod-error": "^1.5.0"
   },
   "peerDependencies": {
     "next": "^15.2.3",
     "react": "^19.0.0",
+    "typescript": "^5",
     "zod": "^3.24.2",
     "react-hot-toast": "^2.5.2",
     "zod-error": "^1.5.0"
