--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safe-actions-state",
-  "version": "1.0.7",
-  "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in auth, RBAC, Zod validation, auto retries, and real-time toast feedback. Just write your DB logic & zod schema, for your server action, we handle validation, auth, errors, retries & UI feedback seamlessly out of the box. No extra code, just focus on your app business logic only! 🚀",
+  "version": "1.0.8",
+  "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in authentication and RBAC(role based access control) checks, Zod validation, auto retries if server action fails, and real-time toast feedback out of the box. Just write your DB logic & Zod schema, we handle zod validation, authentication, RBAC authorization, error handling, retries & UI feedback seamlessly. No extra code from your side, just focus on your business logic & DB interaction only! 🚀",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
