--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.8",
   "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in authentication and RBAC(role based access control) checks, Zod validation, auto retries if server action fails, and real-time toast feedback out of the box. Just write your DB logic & Zod schema, we handle zod validation, authentication, RBAC authorization, error handling, retries & UI feedback seamlessly. No extra code from your side, just focus on your business logic & DB interaction only! 🚀",
   "private": false,
-  "license": "MIT",
-  "main": "dist/index.js",
+  "type": "module",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.mjs"
+  },
+  "license": "MIT",
+  "main": "dist/index.js",
   "files": [
     "dist",
     "package.json",
     "README.md"
   ],
-  "exports": {
-    "import": "./dist/index.mjs",
-    "require": "./dist/index.js"
-  },
   "publishConfig": {
     "access": "public"
   },
