completed README.md file and done complete code refactoring

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-actions-state",
-  "version": "1.0.24",
+  "version": "1.0.28",
   "author": "Sadiq Vali",
   "keywords": [],
   "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in authentication and RBAC(role based access control) checks, Zod validation, auto retries if server action fails, and real-time toast feedback out of the box. Just write your DB logic & Zod schema, we handle zod validation, authentication, RBAC authorization, error handling, retries & UI feedback seamlessly. No extra code from your side, just focus on your business logic & DB interaction only! 🚀",
@@ -17,7 +17,8 @@
   "sideEffects": false,
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs",
-    "pub": "bun run rollup && bun publish"
+    "pub": "bun run del && bun i && bun run rollup && bun publish",
+    "del": "rm -rf dist node_modules bun.lockb"
   },
   "repository": {
     "type": "git",
