--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
   "name": "safe-actions-state",
-  "version": "1.0.28",
+  "version": "1.1.01",
   "author": "Sadiq Vali",
-  "keywords": [],
+  "keywords": [
+    "nextjs",
+    "server-actions",
+    "client-actions",
+    "rbac",
+    "role-based-access-control",
+    "authentication",
+    "authorization",
+    "zod-validation",
+    "type-safe",
+    "typescript",
+    "auto-retry",
+    "toast-notifications",
+    "error-handling",
+    "form-validation",
+    "field-errors",
+    "react-hooks",
+    "middleware",
+    "next-auth",
+    "safe-actions",
+    "abort-controller",
+    "async-state-management"
+  ],
   "description": "A lightweight, type-safe utility for Next.js server & client actions with built-in authentication and RBAC(role based access control) checks, Zod validation, auto retries if server action fails, and real-time toast feedback out of the box. Just write your DB logic & Zod schema, we handle zod validation, authentication, RBAC authorization, error handling, retries & UI feedback seamlessly. No extra code from your side, just focus on your business logic & DB interaction only! 🚀",
   "files": [
     "dist",
