--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-actions-state",
-  "version": "1.1.14",
+  "version": "1.1.15",
   "author": "Sadiq Vali",
   "keywords": [
     "nextjs",
@@ -52,15 +52,15 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/bun": "latest",
-    "rollup-plugin-dts": "^6.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "tslib": "^2.8.1",
-    "rollup": "^4.37.0",
     "@types/react": "^19.0.12",
     "next": "^15.2.3",
     "react": "^19.0.0",
+    "rollup": "^4.37.0",
+    "rollup-plugin-dts": "^6.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "sonner": "^2.0.3",
+    "tslib": "^2.8.1",
     "typescript": "^5",
-    "react-hot-toast": "^2.5.2",
     "zod": "^3.24.2",
     "zod-error": "^1.5.0"
   },
@@ -71,6 +71,6 @@
     "zod-error": "^1.5.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "sonner": "^2.0.3"
   }
 }
